# paris-app

./: .env.example  .gitignore  CLAUDE.md  README.md  n8n_daily.json  pyproject.toml  run.sh
backend/: db.py  geocoder.py  main.py  requirements.txt  scheduler.py
backend/scrapers/: __init__.py  base.py
backend/scrapers/editorial/: jina_base.py  sortiraparis_boutiques.py  sortiraparis_cafes.py  sortiraparis_debug.py  sortiraparis_expos.py  sortiraparis_popup.py  sortiraparis_restaurant.py  sources.py  timeout_debug.py  timeout_paris.py
backend/scrapers/email/: lefooding.py  lessentiel_paris.py  timeout_paris.py
backend/scrapers/opendata/: inpi_api.py  inpi_api_drinks.py  inpi_api_food.py  paris_opendata.py
backend/scrapers/website/: doitinparis.py  lebonbon_drinks.py  lebonbon_drinks_debug.py  lebonbon_food.py  lebonbon_food_debug.py  lebonbon_healthy.py  lebonbon_loisirs.py  lebonbon_news.py  lebonbon_news_debug.py  museofile.py  museum_events.py  newtable.py  nouveaux_cafes.py  nouveaux_restos.py  numero_popup.py  parisbouge_autre.py  parisbouge_bars.py  parisbouge_expos.py  parisbouge_restos.py  parismusee_expos.py  secrets_of_paris.py  sortirparis.py
backend/tests/: test_utils.py
backend/utils/: email_reader.py  expo_parser.py  typer.py  url_finder.py
frontend/: paris-explorer.html
frontend/css/: main.css
frontend/js/: api.js  app.js  config.js  filters.js  map.js  render.js  search.js  state.js  utils.js
scripts/: api_v1.py  fix_doitinparis_dates.py  remediate_events.py  scraper_v1.py  seed_museums_wikipedia.py
