[project]
name = "claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "browser-use>=0.11.13",
    "dateparser>=1.4.0",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
